# hardlight

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.codesandbox/: Dockerfile  tasks.json
.github/workflows/: rust.yml
actix-compare/: Cargo.toml  cert.pem  key.pem
actix-compare/src/: main.rs
examples/: basic.rs  pet.rs  todo.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: client.rs  lib.rs  server.rs  wire.rs
testing-project/: Cargo.toml
testing-project/src/: main.rs  service.rs
testing-project/src/handler/: decrement.rs  get.rs  increment.rs  mod.rs
