[package]
name = "hardlight"
version = "0.1.0"
edition = "2021"
description = "placeholder"
authors = ["Azz <azz@valera.co>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
rkyv = { version = "0.7.40", features = ["validation", "uuid", "copy"] }
bytecheck = { version = "0.6.9", features = ["uuid"] }
version = "3.0.0"
tokio-rustls = { version = "0.23.4", default-features = false, features = ["dangerous_configuration"] }
rcgen = { version = "0.10.0", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1.37"
rustls-native-certs = "0.6.2"
hardlight-macros = { path = "macros" }
array-init = "2.0"

[workspace]
members = [
    ".",
    "testing-project",
    "macros",
]
