[package]
name = "actix-compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
reqwest = { version = "0.11.18", features = ["gzip", "brotli", "deflate"] }
rustls = "0.20.2"
rustls-pemfile = "1.0.2"
tokio = { version = "1.28.2", features = ["full"] }
