[package]
name = "hardlight-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro-crate = "1.0"
heck = "0.4.1"

[lib]
proc-macro = true
