[package]
name = "hardlight-macros"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A collection of procedural macros for the Hardlight RPC framework."
repository = "https://github.com/valeralabs/hardlight"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro-crate = "1.0"
heck = "0.4.1"

[lib]
proc-macro = true

[features]
disable-self-signed = []
